--- a/BlazorApp1/Pages/Shared/_Layout.cshtml
+++ b/BlazorApp1/Pages/Shared/_Layout.cshtml
@@ -64,7 +64,7 @@
 </div>
 <footer style="overflow: hidden;" class="footer border-top pl-3 text-muted">
     <div class="container">
-        &copy; 2023 - BlazorApp1
+        &copy; 2023 - Chuck Chat
         @{
             var foundPrivacy = Url.Page("/Privacy", new { area = "" });
         }
