--- a/BlazorApp1/Pages/_Host.cshtml
+++ b/BlazorApp1/Pages/_Host.cshtml
@@ -20,12 +20,12 @@
 
 <div id="blazor-error-ui">
     <environment include="Staging,Production">
-        An error has occurred. This application may no longer respond until reloaded.
+        Произошла ошибка. Это приложение может больше не отвечать до перезагрузки.
     </environment>
     <environment include="Development">
-        An unhandled exception has occurred. See browser dev tools for details.
+        Произошло необработанное исключение. Подробности смотрите в разделе Инструменты разработки браузера.
     </environment>
-    <a href="" class="reload">Reload</a>
+    <a href="" class="reload">Перезагрузить</a>
     <a class="dismiss">🗙</a>
 </div>
 
